--- a/NoteApp/zh-Hant.lproj/Localizable.strings
+++ b/NoteApp/zh-Hant.lproj/Localizable.strings
@@ -4,7 +4,7 @@
 
   Created by student46 on 2020/5/15.
   Copyright © 2020 Vincent. All rights reserved.
-英文
+中文
  */
-"new.note"="新的筆記本...";
-"list"="清單 ";
+"new.note"="寵物紀錄...";
+"list"="回憶 ";
